@@ -4,16 +4,19 @@ package com.yugabyte.yw.models;
 
 import static com.yugabyte.yw.common.ModelFactory.createUniverse;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.yugabyte.yw.common.FakeDBApplication;
 import com.yugabyte.yw.common.ModelFactory;
-import com.yugabyte.yw.forms.XClusterConfigCreateFormData.BootstrapParams.BootstarpBackupParams;
+import com.yugabyte.yw.forms.DrConfigCreateForm.PitrParams;
+import com.yugabyte.yw.forms.XClusterConfigCreateFormData.BootstrapParams.BootstrapBackupParams;
 import com.yugabyte.yw.models.XClusterConfig.ConfigType;
 import com.yugabyte.yw.models.configs.CustomerConfig;
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.ArrayList;
 import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
@@ -22,9 +25,8 @@ import play.libs.Json;
 public class DrConfigTest extends FakeDBApplication {
   private Universe sourceUniverse;
   private Universe targetUniverse;
-  private Customer defaultCustomer;
   private CustomerConfig config;
-  private BootstarpBackupParams backupRequestParams;
+  private BootstrapBackupParams backupRequestParams;
 
   private CustomerConfig createData(Customer customer) {
     JsonNode formData =
@@ -37,24 +39,25 @@ public class DrConfigTest extends FakeDBApplication {
 
   @Before
   public void setUp() {
-    defaultCustomer = ModelFactory.testCustomer();
+    Customer defaultCustomer = ModelFactory.testCustomer();
     config = createData(defaultCustomer);
     sourceUniverse = createUniverse("source Universe");
     targetUniverse = createUniverse("target Universe");
 
-    backupRequestParams = new BootstarpBackupParams();
+    backupRequestParams = new BootstrapBackupParams();
     backupRequestParams.storageConfigUUID = config.getConfigUUID();
   }
 
   @Test
   public void testCreateDbScopedDrConfig() {
-    Set<String> sourceDbIds = new HashSet<String>(Arrays.asList("db1", "db2"));
+    Set<String> sourceDbIds = Set.of("db1", "db2");
     DrConfig drConfig =
         DrConfig.create(
             "replication1",
             sourceUniverse.getUniverseUUID(),
             targetUniverse.getUniverseUUID(),
             backupRequestParams,
+            new PitrParams(),
             sourceDbIds);
     DrConfig found = DrConfig.getOrBadRequest(drConfig.getUuid());
     XClusterConfig activeXClusterConfig = found.getActiveXClusterConfig();
@@ -72,14 +75,15 @@ public class DrConfigTest extends FakeDBApplication {
 
   @Test
   public void testCreateTxnDrConfig() {
-    Set<String> sourceTableIds = new HashSet<String>(Arrays.asList("table1", "table2", "table3"));
+    Set<String> sourceTableIds = Set.of("table1", "table2", "table3");
     DrConfig drConfig =
         DrConfig.create(
             "replication2",
             sourceUniverse.getUniverseUUID(),
             targetUniverse.getUniverseUUID(),
             sourceTableIds,
-            backupRequestParams);
+            backupRequestParams,
+            new PitrParams());
     DrConfig found = DrConfig.getOrBadRequest(drConfig.getUuid());
     XClusterConfig activeXClusterConfig = found.getActiveXClusterConfig();
 
@@ -88,5 +92,97 @@ public class DrConfigTest extends FakeDBApplication {
     assertEquals(0, activeXClusterConfig.getDbIds().size());
     assertEquals(ConfigType.Txn, activeXClusterConfig.getType());
     assertEquals(config.getConfigUUID(), found.getStorageConfigUuid());
+  }
+
+  @Test
+  public void testUniqueReplicationGroupName() {
+    Set<String> sourceDbId1 = Set.of("db1", "db2");
+    DrConfig drConfig1 =
+        DrConfig.create(
+            "replication1",
+            sourceUniverse.getUniverseUUID(),
+            targetUniverse.getUniverseUUID(),
+            backupRequestParams,
+            new PitrParams(),
+            sourceDbId1);
+    DrConfig found1 = DrConfig.getOrBadRequest(drConfig1.getUuid());
+    XClusterConfig activeXClusterConfig1 = found1.getActiveXClusterConfig();
+    assertEquals(drConfig1.getUuid(), found1.getUuid());
+
+    Set<String> sourceDbId2 = Set.of("db2");
+    DrConfig drConfig2 =
+        DrConfig.create(
+            "replication",
+            sourceUniverse.getUniverseUUID(),
+            targetUniverse.getUniverseUUID(),
+            backupRequestParams,
+            new PitrParams(),
+            sourceDbId2);
+    DrConfig found2 = DrConfig.getOrBadRequest(drConfig2.getUuid());
+    XClusterConfig activeXClusterConfig2 = found2.getActiveXClusterConfig();
+    assertEquals(drConfig2.getUuid(), found2.getUuid());
+    assertNotEquals(
+        activeXClusterConfig1.getReplicationGroupName(),
+        activeXClusterConfig2.getReplicationGroupName());
+  }
+
+  @Test
+  public void testDrConfigNoXClusterConfigAttached() {
+    Set<String> sourceDbId1 = Set.of("db1", "db2");
+    DrConfig drConfig =
+        DrConfig.create(
+            "replication1",
+            sourceUniverse.getUniverseUUID(),
+            targetUniverse.getUniverseUUID(),
+            backupRequestParams,
+            new PitrParams(),
+            sourceDbId1);
+    drConfig.setXClusterConfigs(new ArrayList<>());
+    assertEquals(false, drConfig.hasActiveXClusterConfig());
+    assertThrows(IllegalStateException.class, () -> drConfig.getActiveXClusterConfig());
+  }
+
+  @Test
+  public void testDrConfigHasExactlyOneXClusterConfig() {
+    Set<String> sourceDbId1 = Set.of("db1", "db2");
+    DrConfig drConfig =
+        DrConfig.create(
+            "replication1",
+            sourceUniverse.getUniverseUUID(),
+            targetUniverse.getUniverseUUID(),
+            backupRequestParams,
+            new PitrParams(),
+            sourceDbId1);
+    assertEquals(true, drConfig.hasActiveXClusterConfig());
+    try {
+      drConfig.getActiveXClusterConfig();
+    } catch (Exception e) {
+      fail();
+    }
+  }
+
+  @Test
+  public void testDrConfigHasNoActiveXClusterConfig() {
+    Set<String> sourceDbId1 = Set.of("db1");
+    Set<String> sourceDbId2 = Set.of("db2");
+    DrConfig drConfig =
+        DrConfig.create(
+            "replication1",
+            sourceUniverse.getUniverseUUID(),
+            targetUniverse.getUniverseUUID(),
+            backupRequestParams,
+            new PitrParams(),
+            sourceDbId1);
+
+    drConfig.addXClusterConfig(
+        targetUniverse.getUniverseUUID(), sourceUniverse.getUniverseUUID(), ConfigType.Db);
+    drConfig.update();
+    for (XClusterConfig xClusterConfig : drConfig.getXClusterConfigs()) {
+      xClusterConfig.setSecondary(true);
+      xClusterConfig.update();
+    }
+
+    assertEquals(false, drConfig.hasActiveXClusterConfig());
+    assertThrows(IllegalStateException.class, () -> drConfig.getActiveXClusterConfig());
   }
 }
